--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I've hosted this site with GitHub Pages!</p>
+<h1>Hello!</h1>
+<p>Thanks for visiting my website. This is still in progress so stay tuned for updates later this year!</p>
 </body>
 </html>
